--- a/teams.html
+++ b/teams.html
@@ -680,19 +680,19 @@
                     </ul>
                     <ul class="flex gap-6 justifiy-center-items-center">
                         <li>
-                            <a href="" target="_blank" class="text-xl text-gray-200"><i
+                            <a href="https://www.facebook.com/" target="_blank" class="text-xl text-gray-200"><i
                                     class="fa-brands fa-facebook"></i></a>
                         </li>
                         <li>
-                            <a href="" target="_blank" class="text-xl text-gray-200"><i
+                            <a href="https://www.instagram.com/" target="_blank" class="text-xl text-gray-200"><i
                                     class="fa-brands fa-instagram"></i></a>
                         </li>
                         <li>
-                            <a href="" target="_blank" class="text-xl text-gray-200"><i
+                            <a href="https://www.linkedin.com/" target="_blank" class="text-xl text-gray-200"><i
                                     class="fa-brands fa-linkedin-in"></i></a>
                         </li>
                         <li>
-                            <a href="" target="_blank" class="text-xl text-gray-200"><i
+                            <a href="https://twitter.com/" target="_blank" class="text-xl text-gray-200"><i
                                     class="fa-brands fa-x-twitter"></i></a>
                         </li>
                     </ul>
